--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <!-- Title -->
+    <title>Mustafa Jamal | Portfolio Website</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Mustafa Jamal | Portfolio Website" />
+    <meta name="description" content="Welcome to the portfolio of Mustafa Jamal — a passionate web developer skilled in React, Next.js, Tailwind CSS, and modern web technologies. Explore my projects, skills, and experience." />
+    <meta name="keywords" content="Mustafa Jamal, Portfolio, Web Developer, React, Next.js, Tailwind CSS, Frontend Developer, Full Stack Developer, JavaScript, Vite" />
+    <meta name="author" content="Mustafa Jamal" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-website-url.com/" />
+    <meta property="og:title" content="Mustafa Jamal | Portfolio Website" />
+    <meta property="og:description" content="Explore the portfolio of Mustafa Jamal — showcasing modern projects, skills, and expertise in web development." />
+    <meta property="og:image" content="https://your-website-url.com/preview-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://your-website-url.com/" />
+    <meta property="twitter:title" content="Mustafa Jamal | Portfolio Website" />
+    <meta property="twitter:description" content="Discover Mustafa Jamal’s portfolio featuring projects and skills in Html ,Css,JavaScript,React Next.js, Tailwind CSS, and modern web technologies." />
+    <meta property="twitter:image" content="https://your-website-url.com/preview-image.jpg" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
