update seo tags

--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Title -->
-    <title>Mustafa Jamal | Portfolio Website</title>
+    <!-- ✅ Primary SEO Meta Tags -->
+<title>Mustafa Jamal | Full Stack Web Developer Portfolio</title>
+<meta name="title" content="Mustafa Jamal | Full Stack Web Developer Portfolio" />
+<meta name="description" content="Discover the portfolio of Mustafa Jamal — a passionate full stack web developer skilled in React, Next.js, Tailwind CSS, JavaScript, and modern web technologies. Explore projects, skills, and experience that showcase creativity and technical expertise." />
+<meta name="keywords" content="Mustafa Jamal, Full Stack Developer, Portfolio Website, React Developer, Next.js Developer, Tailwind CSS, JavaScript, MERN Stack Developer, Frontend Developer, Backend Developer, Web Development" />
+<meta name="author" content="Mustafa Jamal" />
+<meta name="robots" content="index, follow" />
+<meta name="language" content="English" />
+<link rel="canonical" href="https://mustafa-new-portfolio-website.vercel.app/" />
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="Mustafa Jamal | Portfolio Website" />
-    <meta name="description" content="Welcome to the portfolio of Mustafa Jamal — a passionate web developer skilled in React, Next.js, Tailwind CSS, and modern web technologies. Explore my projects, skills, and experience." />
-    <meta name="keywords" content="Mustafa Jamal, Portfolio, Web Developer, React, Next.js, Tailwind CSS, Frontend Developer, Full Stack Developer, JavaScript, Vite" />
-    <meta name="author" content="Mustafa Jamal" />
+<!-- ✅ Open Graph / Facebook / Instagram / LinkedIn -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mustafa-new-portfolio-website.vercel.app/" />
+<meta property="og:title" content="Mustafa Jamal | Full Stack Web Developer Portfolio" />
+<meta property="og:description" content="Explore Mustafa Jamal’s portfolio — showcasing modern web development projects, technical expertise, and skills in React, Next.js, Tailwind CSS, and full stack solutions." />
+<meta property="og:image" content="https://mustafa-new-portfolio-website.vercel.app/preview-image.jpg" />
+<meta property="og:site_name" content="Mustafa Jamal Portfolio" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-website-url.com/" />
-    <meta property="og:title" content="Mustafa Jamal | Portfolio Website" />
-    <meta property="og:description" content="Explore the portfolio of Mustafa Jamal — showcasing modern projects, skills, and expertise in web development." />
-    <meta property="og:image" content="https://your-website-url.com/preview-image.jpg" />
+<!-- ✅ Twitter / WhatsApp / Telegram / Slack / Discord -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://mustafa-new-portfolio-website.vercel.app/" />
+<meta property="twitter:title" content="Mustafa Jamal | Full Stack Web Developer Portfolio" />
+<meta property="twitter:description" content="Showcasing Mustafa Jamal’s projects, skills, and expertise in React, Next.js, Tailwind CSS, JavaScript, and full stack web development." />
+<meta property="twitter:image" content="https://mustafa-new-portfolio-website.vercel.app/preview-image.jpg" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://your-website-url.com/" />
-    <meta property="twitter:title" content="Mustafa Jamal | Portfolio Website" />
-    <meta property="twitter:description" content="Discover Mustafa Jamal’s portfolio featuring projects and skills in Html ,Css,JavaScript,React Next.js, Tailwind CSS, and modern web technologies." />
-    <meta property="twitter:image" content="https://your-website-url.com/preview-image.jpg" />
+<!-- ✅ Favicons -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-    <!-- Robots -->
-    <meta name="robots" content="index, follow" />
-  </head>
+
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
